@@ -64,6 +64,9 @@
 		</div>
 
 		<div class="buttonbar">
+			<button id="btnCopyTitle">Copy Title</button>
+			<button id="btnCopyUrl">Copy URL</button>
+			<div></div>
 			<button id="btnCopy">Copy</button>
 			<button id="btnCopyAll">Copy All Tab URLs</button>
 			<button id="btnCancel">Cancel</button>
